<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#399EC6"
    android:outlineProvider="none"
    tools:context="SignUp"
    tools:ignore="ExtraText,InvalidId,Overdraw">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="122dp"
        android:layout_height="115dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:foregroundTint="#F4F0F0"
        android:src="@drawable/logo2"
        tools:ignore="ContentDescription,InvalidId,ImageContrastCheck" />

    <EditText
        android:id="@+id/name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20sp"
        android:autofillHints="Name"
        android:background="@drawable/background"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingStart="13dp"
        android:paddingEnd="250dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sign_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20sp"
        android:autofillHints="Email"
        android:background="@drawable/background"
        android:hint="@string/emailad"
        android:inputType="textEmailAddress"
        android:paddingStart="13dp"
        android:paddingEnd="100dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/create_account_to_continue"
        android:textColor="#757575"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/sign_pass"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/sign_email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20sp"
        android:autofillHints="Email"
        android:background="@drawable/background"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="13dp"
        android:paddingEnd="100dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FAFFFFFF"
        android:backgroundTint="#FAFFFFFF"
        android:fontFamily="@font/bubblegum_sans"
        android:fontFeatureSettings="@string/linkup"
        android:text="@string/linkup"
        android:textColor="@color/black"
        android:textSize="36sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/sign_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background"
        android:backgroundTint="#8BB93F"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/sign_up_"
        android:textColor="#201616"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_google"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background"
        android:backgroundTint="#201616"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/login_with_google"
        android:textColor="#A6D852"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_google"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background"
        android:backgroundTint="#201616"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/login_with_facebook"
        android:textColor="#A6D852"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/or" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="110dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/already_have_an_account"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/logotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/textView3"
        android:fontFamily="@font/bubblegum_sans"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/login_bt"
        android:textColor="#827717"
        android:textSize="16sp" />


</RelativeLayout>