<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#399EC6"
    android:outlineProvider="none"
    tools:context=".Login"
    tools:ignore="ExtraText,InvalidId,Overdraw">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="122dp"
        android:layout_height="115dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:foregroundTint="#F4F0F0"
        android:src="@drawable/logo2"
        tools:ignore="ContentDescription,InvalidId,ImageContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="20sp"
        android:autofillHints="Email"
        android:background="@drawable/background"
        android:hint="@string/emailad"
        android:inputType="textEmailAddress"
        android:paddingStart="13dp"
        android:paddingEnd="100dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login1"
        android:textColor="#757575"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/pass"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20sp"
        android:autofillHints="Password"
        android:background="@drawable/background"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="13dp"
        android:paddingEnd="100dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FAFFFFFF"
        android:backgroundTint="#FAFFFFFF"
        android:fontFamily="@font/bubblegum_sans"
        android:fontFeatureSettings="@string/linkup"
        android:text="@string/linkup"
        android:textColor="@color/black"
        android:textSize="36sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background"
        android:backgroundTint="#8BB93F"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/login"
        android:textColor="#201616"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background"
        android:backgroundTint="#201616"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/login_with_google"
        android:textColor="#A6D852"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background"
        android:backgroundTint="#201616"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/login_with_facebook"
        android:textColor="#A6D852"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        android:textColor="#6E6666" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/textView3"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/sign_up"
        android:textColor="#827717"
        android:textSize="16sp" />


</RelativeLayout>